--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,7 @@
-# Next line added
 cmake_minimum_required(VERSION 3.12)
 
 include(pico_sdk_import.cmake)
 
-# Next line added
 project(Pico-Clock-Green)
 
 pico_sdk_init()
@@ -19,7 +17,7 @@ pico_add_extra_outputs(Pico-Clock-Green)
 
 
 # Pull in our pico_stdlib which pulls in commonly used features
-target_link_libraries(Pico-Clock-Green pico_stdlib hardware_i2c hardware_adc)
+target_link_libraries(Pico-Clock-Green pico_stdlib hardware_i2c hardware_adc hardware_pwm pico_unique_id)
 
 
 # add url via pico_set_program_url
