--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,13 @@ set (PICO_BOARD pico_w)
 pico_sdk_init()
 #
 #
+message("Running makefsdata python script")
+execute_process(COMMAND
+        py makefsdata.py
+        WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
+)
+#
+#
 add_executable(Pico-Green-Clock
        Pico-Green-Clock.c
        picow_ntp_client.c
@@ -34,7 +41,7 @@ target_include_directories(Pico-Green-Clock PRIVATE
 #
 #
 # Send Pico's output to USB and also to UART (for debug purposes).
-pico_enable_stdio_uart(Pico-Green-Clock 1)
+pico_enable_stdio_uart(Pico-Green-Clock 0)
 pico_enable_stdio_usb(Pico-Green-Clock 1)
 #
 #
@@ -43,7 +50,7 @@ pico_add_extra_outputs(Pico-Green-Clock)
 #
 #
 # Pull in our pico_stdlib which pulls in commonly used features
-target_link_libraries(Pico-Green-Clock hardware_adc hardware_flash hardware_i2c hardware_pwm hardware_sync pico_stdlib pico_unique_id pico_multicore pico_cyw43_arch_lwip_threadsafe_background)
+target_link_libraries(Pico-Green-Clock hardware_adc hardware_flash hardware_i2c hardware_pwm hardware_sync pico_stdlib pico_unique_id pico_multicore pico_cyw43_arch_lwip_threadsafe_background pico_lwip_http)
 #
 #
 # add url via pico_set_program_url
