Alter the toolchain to use the default pico toolsuite. This doesn't include a windows only py launcher. Use python instead which should work on windows and linux.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ pico_sdk_init()
 #
 message("Running makefsdata python script")
 execute_process(COMMAND
-        py makefsdata.py
+        python makefsdata.py
         WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
 )
 #
