Update with Pico SDK 2.1.1 with VSCode 1.99.3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,42 @@
-# == DO NEVER EDIT THE NEXT LINES for Raspberry Pi Pico VS Code Extension to work ==
+# Generated Cmake Pico project file
+
+cmake_minimum_required(VERSION 3.13)
+
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+# Initialise pico_sdk from installed location
+# (note this can come from environment, CMake cache etc)
+
+# == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
 if(WIN32)
     set(USERHOME $ENV{USERPROFILE})
 else()
     set(USERHOME $ENV{HOME})
 endif()
-set(sdkVersion 2.0.0)
-set(toolchainVersion 13_2_Rel1)
-set(picotoolVersion 2.0.0)
-#include(${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
+set(sdkVersion 2.1.0)
+set(toolchainVersion 13_3_Rel1)
+set(picotoolVersion 2.1.0)
+set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
+if (EXISTS ${picoVscode})
+    include(${picoVscode})
+endif()
 # ====================================================================================
 # CMakeLists.txt
 # For Pico-Green-Clock
 # CMakeLists.txt version for Pico W, with NTP support.
 #
-set (PICO_BOARD pico_w)
+set(PICO_BOARD pico_w CACHE STRING "Board type")
 #
-cmake_minimum_required(VERSION 3.13)
-#
-#
+
+# Pull in Raspberry Pi Pico SDK (must be before project)
 include(pico_sdk_import.cmake)
 #
 #
-project(Pico-Green-Clock)
-#
-#
-# set (CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
-set (C_STANDARD 11)
-set (CXX_STANDARD 17)
-#
-#
+project(Pico-Green-Clock C CXX ASM)
+
+# Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 #
 #
@@ -38,6 +46,10 @@ execute_process(COMMAND
         WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
 )
 #
+
+pico_set_program_name(Pico-Green-Clock "Pico-Green-Clock")
+pico_set_program_version(Pico-Green-Clock "10.10")
+
 #
 add_executable(Pico-Green-Clock
        Pico-Green-Clock.c
@@ -64,7 +76,19 @@ pico_add_extra_outputs(Pico-Green-Clock)
 #
 #
 # Pull in our pico_stdlib which pulls in commonly used features
-target_link_libraries(Pico-Green-Clock hardware_adc hardware_flash hardware_i2c hardware_pwm hardware_sync pico_stdlib pico_unique_id pico_multicore pico_cyw43_arch_lwip_threadsafe_background pico_lwip_http)
+target_link_libraries(
+        Pico-Green-Clock
+        hardware_adc
+        hardware_flash
+        hardware_i2c
+        hardware_pwm
+        hardware_sync
+        pico_stdlib
+        pico_unique_id
+        pico_multicore
+        pico_cyw43_arch_lwip_threadsafe_background
+        pico_lwip_http
+        )
 #
 #
 # add url via pico_set_program_url
